--- a/src/views/layouts/footerReceipt.ejs
+++ b/src/views/layouts/footerReceipt.ejs
@@ -89,6 +89,7 @@
             });
         });
     </script>
+
 <% if (typeof(receipt) !== 'undefined') { %>
     <script>
         var receipt = <%- JSON.stringify(receipt) %>;
@@ -105,10 +106,22 @@
                         $('#fecha_pago_recibo').val(fecha);
                     });
                 });
-                var premiumMonthly = receipt.monto_prima_recibo / 12;
+                $(document).ready(function () {
+                    $('#fecha_desde_recibo').change(function () {
+                        var extraer = $('#fecha_desde_recibo').val();
+                        var fecha = new Date(extraer);
+                        fecha.setMonth(fecha.getMonth() + 1);
+                        fecha = fecha.toISOString().substring(0, 10);
+                        $('#fecha_hasta_recibo').val(fecha);
+                    });
+                });
+                var numberMonthly = document.getElementById("numero_pago_recibo").value;
+                if ((numberMonthly === '') || (numberMonthly === '0')) {
+                    numberMonthly = 1;
+                }
+                var premiumMonthly = receipt.monto_prima_recibo / numberMonthly;
                 premiumMonthly = premiumMonthly.toFixed(2);
                 document.getElementById("monto_prima_recibo").value = premiumMonthly;
-                document.getElementById("numero_pago_recibo").setAttribute("value", '');
             } else if (getSelectValue === 'TRIMESTRAL') {
                 $(document).ready(function () {
                     $('#tipo_fraccionamiento_recibo').change(function () {
@@ -117,6 +130,15 @@
                         fecha.setMonth(fecha.getMonth() + 4);
                         fecha = fecha.toISOString().substring(0, 10);
                         $('#fecha_pago_recibo').val(fecha);
+                    });
+                });
+                $(document).ready(function () {
+                    $('#fecha_desde_recibo').change(function () {
+                        var extraer = $('#fecha_desde_recibo').val();
+                        var fecha = new Date(extraer);
+                        fecha.setMonth(fecha.getMonth() + 4);
+                        fecha = fecha.toISOString().substring(0, 10);
+                        $('#fecha_hasta_recibo').val(fecha);
                     });
                 });
                 var premiumQuarterly = receipt.monto_prima_recibo / 4;
@@ -133,6 +155,15 @@
                         $('#fecha_pago_recibo').val(fecha);
                     });
                 });
+                $(document).ready(function () {
+                    $('#fecha_desde_recibo').change(function () {
+                        var extraer = $('#fecha_desde_recibo').val();
+                        var fecha = new Date(extraer);
+                        fecha.setMonth(fecha.getMonth() + 6);
+                        fecha = fecha.toISOString().substring(0, 10);
+                        $('#fecha_hasta_recibo').val(fecha);
+                    });
+                });
                 var premiumBiannual = receipt.monto_prima_recibo / 2;
                 premiumBiannual = premiumBiannual.toFixed(2);
                 document.getElementById("monto_prima_recibo").value = premiumBiannual;
@@ -147,6 +178,15 @@
                         $('#fecha_pago_recibo').val(fecha);
                     });
                 });
+                $(document).ready(function () {
+                    $('#fecha_desde_recibo').change(function () {
+                        var extraer = $('#fecha_desde_recibo').val();
+                        var fecha = new Date(extraer);
+                        fecha.setFullYear(fecha.getFullYear() + 1);
+                        fecha = fecha.toISOString().substring(0, 10);
+                        $('#fecha_hasta_recibo').val(fecha);
+                    });
+                });
                 var annualPremium = receipt.monto_prima_recibo / 1;
                 annualPremium = annualPremium.toFixed(2);
                 document.getElementById("monto_prima_recibo").value = annualPremium;
@@ -157,6 +197,8 @@
                 document.getElementById("numero_pago_recibo").value = 0;
                 document.getElementById("tipo_fraccionamiento_recibo").value = '';
                 document.getElementById("fecha_pago_recibo").value = '';
+                document.getElementById("fecha_desde_recibo").value = '';
+                document.getElementById("fecha_hasta_recibo").value = '';
             }
         }
     </script>
@@ -175,6 +217,15 @@
                         $('#fecha_pago_recibo').val(fecha);
                     });
                 });
+                $(document).ready(function () {
+                    $('#fecha_desde_recibo').change(function () {
+                        var extraer = $('#fecha_desde_recibo').val();
+                        var fecha = new Date(extraer);
+                        fecha.setMonth(fecha.getMonth() + 1);
+                        fecha = fecha.toISOString().substring(0, 10);
+                        $('#fecha_hasta_recibo').val(fecha);
+                    });
+                });
                 document.getElementById("numero_pago_recibo").setAttribute("value", '');
             } else if (getSelectValue === 'TRIMESTRAL') {
                 $(document).ready(function () {
@@ -184,6 +235,15 @@
                         fecha.setMonth(fecha.getMonth() + 4);
                         fecha = fecha.toISOString().substring(0, 10);
                         $('#fecha_pago_recibo').val(fecha);
+                    });
+                });
+                $(document).ready(function () {
+                    $('#fecha_desde_recibo').change(function () {
+                        var extraer = $('#fecha_desde_recibo').val();
+                        var fecha = new Date(extraer);
+                        fecha.setMonth(fecha.getMonth() + 4);
+                        fecha = fecha.toISOString().substring(0, 10);
+                        $('#fecha_hasta_recibo').val(fecha);
                     });
                 });
                 document.getElementById("numero_pago_recibo").value = 4;
@@ -197,6 +257,15 @@
                         $('#fecha_pago_recibo').val(fecha);
                     });
                 });
+                $(document).ready(function () {
+                    $('#fecha_desde_recibo').change(function () {
+                        var extraer = $('#fecha_desde_recibo').val();
+                        var fecha = new Date(extraer);
+                        fecha.setMonth(fecha.getMonth() + 6);
+                        fecha = fecha.toISOString().substring(0, 10);
+                        $('#fecha_hasta_recibo').val(fecha);
+                    });
+                });
                 document.getElementById("numero_pago_recibo").value = 2;
             }  else if (getSelectValue === 'ANUAL') {
                 $(document).ready(function () {
@@ -208,51 +277,6 @@
                         $('#fecha_pago_recibo').val(fecha);
                     });
                 });
-                document.getElementById("numero_pago_recibo").value = 1;
-            }
-            if (checkboxDivision === false) {
-                document.getElementById("numero_pago_recibo").value = 0;
-                document.getElementById("tipo_fraccionamiento_recibo").value = '';
-                document.getElementById("fecha_pago_recibo").value = '';
-            }
-        }
-    </script>
-<% } %>
-
-    <script>
-        function automaticDates() {
-            var getSelectValue = document.getElementById("tipo_fecha_recibo").value;
-            if (getSelectValue === 'MENSUAL') {
-                $(document).ready(function () {
-                    $('#fecha_desde_recibo').change(function () {
-                        var extraer = $('#fecha_desde_recibo').val();
-                        var fecha = new Date(extraer);
-                        fecha.setMonth(fecha.getMonth() + 1);
-                        fecha = fecha.toISOString().substring(0, 10);
-                        $('#fecha_hasta_recibo').val(fecha);
-                    });
-                });
-            } else if (getSelectValue === 'TRIMESTRAL') {
-                $(document).ready(function () {
-                    $('#fecha_desde_recibo').change(function () {
-                        var extraer = $('#fecha_desde_recibo').val();
-                        var fecha = new Date(extraer);
-                        fecha.setMonth(fecha.getMonth() + 4);
-                        fecha = fecha.toISOString().substring(0, 10);
-                        $('#fecha_hasta_recibo').val(fecha);
-                    });
-                });
-            } else if (getSelectValue === 'SEMESTRAL') {
-                $(document).ready(function () {
-                    $('#fecha_desde_recibo').change(function () {
-                        var extraer = $('#fecha_desde_recibo').val();
-                        var fecha = new Date(extraer);
-                        fecha.setMonth(fecha.getMonth() + 6);
-                        fecha = fecha.toISOString().substring(0, 10);
-                        $('#fecha_hasta_recibo').val(fecha);
-                    });
-                });
-            }  else if (getSelectValue === 'ANUAL') {
                 $(document).ready(function () {
                     $('#fecha_desde_recibo').change(function () {
                         var extraer = $('#fecha_desde_recibo').val();
@@ -262,9 +286,18 @@
                         $('#fecha_hasta_recibo').val(fecha);
                     });
                 });
+                document.getElementById("numero_pago_recibo").value = 1;
+            }
+            if (checkboxDivision === false) {
+                document.getElementById("numero_pago_recibo").value = 0;
+                document.getElementById("tipo_fraccionamiento_recibo").value = '';
+                document.getElementById("fecha_pago_recibo").value = '';
+                document.getElementById("fecha_desde_recibo").value = '';
+                document.getElementById("fecha_hasta_recibo").value = '';
             }
         }
     </script>
+<% } %>
 
     <script>
         var naturalInsureds = <%- JSON.stringify(naturalInsureds) %>;
