--- a/src/views/travelPolicyForm.ejs
+++ b/src/views/travelPolicyForm.ejs
@@ -321,32 +321,6 @@
                                             </div>
                                         </div>
                                         <div class="form-group">
-                                            <div class="form-group row"><label class="col-sm-3 col-form-label">Tipo Fecha</label>
-                                                <div class="col-sm-9">
-                                                    <select class="form-control" name="tipo_fecha_recibo" id="tipo_fecha_recibo" required onchange="automaticDates()">
-                                                        <option value="">Seleccione *</option>
-                                                        <option value="MENSUAL">MENSUAL</option>
-                                                        <option value="TRIMESTRAL">TRIMESTRAL</option>
-                                                        <option value="SEMESTRAL">SEMESTRAL</option>
-                                                        <option value="ANUAL">ANUAL</option>
-                                                    </select>
-                                                </div>
-                                            </div>
-                                        </div>
-                                        <div class="form-group">
-                                            <div class="form-group row"><label class="col-sm-3 col-form-label">Vigencia Desde</label>
-                                                <div class="col-sm-9">
-                                                    <input 
-                                                        type="date"
-                                                        name="fecha_desde_recibo"
-                                                        id="fecha_desde_recibo" 
-                                                        class="form-control"
-                                                        required
-                                                    >
-                                                </div>
-                                            </div>
-                                        </div>
-                                        <div class="form-group">
                                             <div class="form-group row" id="radioContainer">
                                                 <label class="col-sm-3 col-form-label">Fraccionamiento</label>
                                                 <div class="col-sm-9">
@@ -360,6 +334,31 @@
                                         </div>
                                         <div id="active-select-1">
                                             <div class="form-group">
+                                                <div class="form-group row"><label class="col-sm-3 col-form-label">Tipo</label>
+                                                    <div class="col-sm-9">
+                                                        <select class="form-control" name="tipo_fraccionamiento_recibo" id="tipo_fraccionamiento_recibo" onchange="premiumCalculationDate()">
+                                                            <option value="">Seleccione</option>
+                                                            <option value="MENSUAL">MENSUAL</option>
+                                                            <option value="TRIMESTRAL">TRIMESTRAL</option>
+                                                            <option value="SEMESTRAL">SEMESTRAL</option>
+                                                            <option value="ANUAL">ANUAL</option>
+                                                        </select>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                            <div class="form-group">
+                                                <div class="form-group row"><label class="col-sm-3 col-form-label">Vigencia Desde</label>
+                                                    <div class="col-sm-9">
+                                                        <input 
+                                                            type="date"
+                                                            name="fecha_desde_recibo"
+                                                            id="fecha_desde_recibo" 
+                                                            class="form-control"
+                                                        >
+                                                    </div>
+                                                </div>
+                                            </div>
+                                            <div class="form-group">
                                                 <div class="form-group row"><label class="col-sm-3 col-form-label">Fecha de Pago</label>
                                                     <div class="col-sm-9">
                                                         <input 
@@ -367,7 +366,6 @@
                                                             name="fecha_pago_recibo"
                                                             id="fecha_pago_recibo" 
                                                             class="form-control"
-                                                            onchange="premiumCalculationDate()"
                                                         >
                                                     </div>
                                                 </div>
@@ -436,33 +434,7 @@
                                                 </div>
                                             </div>
                                         </div>
-                                        <div class="form-group">
-                                            <div class="form-group row"><label class="col-sm-3 col-form-label">Vigencia Hasta</label>
-                                                <div class="col-sm-9">
-                                                    <input 
-                                                        type="date"
-                                                        name="fecha_hasta_recibo"
-                                                        id="fecha_hasta_recibo"
-                                                        class="form-control"
-                                                        required
-                                                    >
-                                                </div>
-                                            </div>
-                                        </div>
                                         <div id="active-select-2">
-                                            <div class="form-group">
-                                                <div class="form-group row"><label class="col-sm-3 col-form-label">Tipo</label>
-                                                    <div class="col-sm-9">
-                                                        <select class="form-control" name="tipo_fraccionamiento_recibo" id="tipo_fraccionamiento_recibo" onchange="premiumCalculationDate()">
-                                                            <option value="">Seleccione</option>
-                                                            <option value="MENSUAL">MENSUAL</option>
-                                                            <option value="TRIMESTRAL">TRIMESTRAL</option>
-                                                            <option value="SEMESTRAL">SEMESTRAL</option>
-                                                            <option value="ANUAL">ANUAL</option>
-                                                        </select>
-                                                    </div>
-                                                </div>
-                                            </div>
                                             <div class="form-group">
                                                 <div class="form-group row"><label class="col-sm-3 col-form-label">Número de Pagos</label>
                                                     <div class="col-sm-9">
@@ -473,7 +445,19 @@
                                                             id="numero_pago_recibo"
                                                             value="0" 
                                                             class="form-control"
-                                                            onchange="premiumCalculationDate()"
+                                                            onkeyup="premiumCalculationDate();"
+                                                        >
+                                                    </div>
+                                                </div>
+                                            </div>
+                                            <div class="form-group">
+                                                <div class="form-group row"><label class="col-sm-3 col-form-label">Vigencia Hasta</label>
+                                                    <div class="col-sm-9">
+                                                        <input 
+                                                            type="date"
+                                                            name="fecha_hasta_recibo"
+                                                            id="fecha_hasta_recibo"
+                                                            class="form-control"
                                                         >
                                                     </div>
                                                 </div>
