--- a/src/views/editReceipt.ejs
+++ b/src/views/editReceipt.ejs
@@ -70,72 +70,6 @@
                                         </div>
                                     </div>
                                     <div class="hr-line-dashed"></div>
-                                    <div class="form-group row"><label class="col-sm-3 col-form-label">Tipo Fecha</label>
-                                        <div class="col-sm-9">
-                                            <select class="form-control" name="tipo_fecha_recibo" id="tipo_fecha_recibo" required onchange="automaticDates()">
-                                                <option value="<%= receipt.tipo_fecha_recibo %>"><%= receipt.tipo_fecha_recibo %></option>
-                                                <option value="MENSUAL">MENSUAL</option>
-                                                <option value="TRIMESTRAL">TRIMESTRAL</option>
-                                                <option value="SEMESTRAL">SEMESTRAL</option>
-                                                <option value="ANUAL">ANUAL</option>
-                                            </select>
-                                        </div>
-                                    </div>
-                                    <div class="hr-line-dashed"></div>
-                                    <div class="form-group row"><label class="col-sm-3 col-form-label">Vigencia Desde</label>
-                                        <div class="col-sm-9">
-                                            <input 
-                                                type="date"
-                                                name="fecha_desde_recibo"
-                                                id="fecha_desde_recibo"
-                                                value="<%= fechaDesdeRecibo %>" 
-                                                class="form-control"
-                                                required
-                                            >
-                                        </div>
-                                    </div>
-                                    <div class="hr-line-dashed"></div>
-                                    <div class="form-group row" id="radioContainer">
-                                        <label class="col-sm-3 col-form-label">Fraccionamiento</label>
-                                        <div class="col-sm-9">
-                                            <div>
-                                                <label><input 
-                                                            type="checkbox" 
-                                                            name="fraccionamiento_boolean_recibo" 
-                                                            id="fraccionamiento_boolean_recibo"
-                                                            onclick="premiumCalculationDate()"
-                                                            <%= receipt.fraccionamiento_boolean_recibo === 1 ? 'checked': '' %> 
-                                                        >  
-                                                        ¿Aplica Fraccionamiento?
-                                                </label>
-                                            </div>
-                                        </div>
-                                    </div>
-                                    <div class="hr-line-dashed"></div>
-                                    <div class="form-group row"><label class="col-sm-3 col-form-label">Tipo</label>
-                                        <div class="col-sm-9">
-                                            <select class="form-control" name="tipo_fraccionamiento_recibo" id="tipo_fraccionamiento_recibo" onchange="premiumCalculationDate()">
-                                                <option value="<%= receipt.tipo_fraccionamiento_recibo %>"><%= receipt.tipo_fraccionamiento_recibo %></option>
-                                                <option value="MENSUAL">MENSUAL</option>
-                                                <option value="TRIMESTRAL">TRIMESTRAL</option>
-                                                <option value="SEMESTRAL">SEMESTRAL</option>
-                                                <option value="ANUAL">ANUAL</option>
-                                            </select>
-                                        </div>
-                                    </div>
-                                    <div class="hr-line-dashed"></div>
-                                    <div class="form-group row"><label class="col-sm-3 col-form-label">Fecha de Pago</label>
-                                        <div class="col-sm-9">
-                                            <input 
-                                                type="date"
-                                                name="fecha_pago_recibo"
-                                                id="fecha_pago_recibo"
-                                                value="<%= fechaPagoRecibo %>" 
-                                                class="form-control"
-                                            >
-                                        </div>
-                                    </div>
-                                    <div class="hr-line-dashed"></div>
                                     <% if (naturalInsured === undefined) { %>
                                         <div class="form-group row"><label class="col-sm-3 col-form-label">Cédula/Rif</label>
                                             <div class="col-sm-9">
@@ -181,6 +115,60 @@
                                             >
                                         </div>
                                     </div>
+                                    <div class="hr-line-dashed"></div>
+                                    <div class="form-group row" id="radioContainer">
+                                        <label class="col-sm-3 col-form-label">Fraccionamiento</label>
+                                        <div class="col-sm-9">
+                                            <div>
+                                                <label><input 
+                                                            type="checkbox" 
+                                                            name="fraccionamiento_boolean_recibo" 
+                                                            id="fraccionamiento_boolean_recibo"
+                                                            onclick="premiumCalculationDate()"
+                                                            <%= receipt.fraccionamiento_boolean_recibo === 1 ? 'checked': '' %> 
+                                                        >  
+                                                        ¿Aplica Fraccionamiento?
+                                                </label>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="hr-line-dashed"></div>
+                                    <div class="form-group row"><label class="col-sm-3 col-form-label">Tipo</label>
+                                        <div class="col-sm-9">
+                                            <select class="form-control" name="tipo_fraccionamiento_recibo" id="tipo_fraccionamiento_recibo" onchange="premiumCalculationDate()">
+                                                <option value="<%= receipt.tipo_fraccionamiento_recibo %>"><%= receipt.tipo_fraccionamiento_recibo %></option>
+                                                <option value="MENSUAL">MENSUAL</option>
+                                                <option value="TRIMESTRAL">TRIMESTRAL</option>
+                                                <option value="SEMESTRAL">SEMESTRAL</option>
+                                                <option value="ANUAL">ANUAL</option>
+                                            </select>
+                                        </div>
+                                    </div>
+                                    <div class="hr-line-dashed"></div>
+                                    <div class="form-group row"><label class="col-sm-3 col-form-label">Vigencia Desde</label>
+                                        <div class="col-sm-9">
+                                            <input 
+                                                type="date"
+                                                name="fecha_desde_recibo"
+                                                id="fecha_desde_recibo"
+                                                value="<%= fechaDesdeRecibo %>" 
+                                                class="form-control"
+                                                required
+                                            >
+                                        </div>
+                                    </div>
+                                    <div class="hr-line-dashed"></div>
+                                    <div class="form-group row"><label class="col-sm-3 col-form-label">Fecha de Pago</label>
+                                        <div class="col-sm-9">
+                                            <input 
+                                                type="date"
+                                                name="fecha_pago_recibo"
+                                                id="fecha_pago_recibo"
+                                                value="<%= fechaPagoRecibo %>" 
+                                                class="form-control"
+                                            >
+                                        </div>
+                                    </div>
                                 </div>
                             </div>
                         </div>
@@ -212,59 +200,6 @@
                                                 <option value="FINANCIAMIENTO">FINANCIAMIENTO</option>
                                                 <option value="OTROS">OTROS</option>
                                             </select>
-                                        </div>
-                                    </div>
-                                    <div class="hr-line-dashed"></div>
-                                    <div class="form-group row"><label class="col-sm-3 col-form-label">Comisión Asociada</label>
-                                        <div class="col-sm-9">
-                                            <input 
-                                                type="text" 
-                                                name="monto_comision_recibo"
-                                                id="monto_comision_recibo"
-                                                value="<%= comisionRecibo %>" 
-                                                class="form-control number_format"
-                                                required
-                                            >
-                                        </div>
-                                    </div>
-                                    <div class="hr-line-dashed"></div>
-                                    <div class="form-group row"><label class="col-sm-3 col-form-label">Vigencia Hasta</label>
-                                        <div class="col-sm-9">
-                                            <input 
-                                                type="date"
-                                                name="fecha_hasta_recibo"
-                                                id="fecha_hasta_recibo"
-                                                value="<%= fechaHastaRecibo %>"
-                                                class="form-control"
-                                                required
-                                            >
-                                        </div>
-                                    </div>
-                                    <div class="hr-line-dashed"></div>
-                                    <div class="form-group row"><label class="col-sm-3 col-form-label">Prima</label>
-                                        <div class="col-sm-9">
-                                            <input 
-                                                type="text" 
-                                                name="monto_prima_recibo"
-                                                id="monto_prima_recibo"
-                                                value="<%= primaRecibo %>" 
-                                                class="form-control number_format"
-                                                required
-                                            >
-                                        </div>
-                                    </div>
-                                    <div class="hr-line-dashed"></div>
-                                    <div class="form-group row"><label class="col-sm-3 col-form-label">Número de Pagos</label>
-                                        <div class="col-sm-9">
-                                            <input 
-                                                type="number"
-                                                step="0.01" 
-                                                name="numero_pago_recibo"
-                                                id="numero_pago_recibo"
-                                                value="<%= receipt.numero_pago_recibo %>" 
-                                                class="form-control"
-                                                onchange="premiumCalculation()"
-                                            >
                                         </div>
                                     </div>
                                     <div class="hr-line-dashed"></div>
@@ -305,6 +240,59 @@
                                                 name="porcentaje_agente_propio"
                                                 id="porcentaje_agente_propio"
                                                 value="<%= ownAgent.porcentaje_agente_propio %>"
+                                                class="form-control number_format"
+                                                required
+                                            >
+                                        </div>
+                                    </div>
+                                    <div class="hr-line-dashed"></div>
+                                    <div class="form-group row"><label class="col-sm-3 col-form-label">Prima</label>
+                                        <div class="col-sm-9">
+                                            <input 
+                                                type="text" 
+                                                name="monto_prima_recibo"
+                                                id="monto_prima_recibo"
+                                                value="<%= primaRecibo %>" 
+                                                class="form-control number_format"
+                                                required
+                                            >
+                                        </div>
+                                    </div>
+                                    <div class="hr-line-dashed"></div>
+                                    <div class="form-group row"><label class="col-sm-3 col-form-label">Número de Pagos</label>
+                                        <div class="col-sm-9">
+                                            <input 
+                                                type="number"
+                                                step="0.01" 
+                                                name="numero_pago_recibo"
+                                                id="numero_pago_recibo"
+                                                value="<%= receipt.numero_pago_recibo %>" 
+                                                class="form-control"
+                                                onkeyup="premiumCalculationDate();"
+                                            >
+                                        </div>
+                                    </div>
+                                    <div class="hr-line-dashed"></div>
+                                    <div class="form-group row"><label class="col-sm-3 col-form-label">Vigencia Hasta</label>
+                                        <div class="col-sm-9">
+                                            <input 
+                                                type="date"
+                                                name="fecha_hasta_recibo"
+                                                id="fecha_hasta_recibo"
+                                                value="<%= fechaHastaRecibo %>"
+                                                class="form-control"
+                                                required
+                                            >
+                                        </div>
+                                    </div>
+                                    <div class="hr-line-dashed"></div>
+                                    <div class="form-group row"><label class="col-sm-3 col-form-label">Comisión Asociada</label>
+                                        <div class="col-sm-9">
+                                            <input 
+                                                type="text" 
+                                                name="monto_comision_recibo"
+                                                id="monto_comision_recibo"
+                                                value="<%= comisionRecibo %>" 
                                                 class="form-control number_format"
                                                 required
                                             >
