--- a/src/views/vehiclePolicyForm.ejs
+++ b/src/views/vehiclePolicyForm.ejs
@@ -379,40 +379,28 @@
                                             </div>
                                         </div>
                                         <div class="form-group">
-                                            <div class="form-group row"><label class="col-sm-3 col-form-label">Conductor</label>
+                                            <div class="form-group row"><label class="col-sm-3 col-form-label">Cédula Conductor</label>
                                                 <div class="col-sm-9">
                                                     <input 
                                                         type="text"
-                                                        name="id_rif_conductor"
-                                                        id="id_rif_conductor"
-                                                        placeholder="Cédula/Rif" 
-                                                        class="form-control"
+                                                        name="cedula_conductor"
+                                                        id="cedula_conductor"
+                                                        placeholder="Cédula"
+                                                        onkeyup="pasarNombreAseguradoConductor();" 
+                                                        class="form-control number_format"
                                                         oninput="let p=this.selectionStart;this.value=this.value.toUpperCase();this.setSelectionRange(p, p);"
                                                     >
                                                 </div>
                                             </div>
                                         </div>
                                         <div class="form-group">
-                                            <div class="form-group row"><label class="col-sm-3 col-form-label">Vigencia desde</label>
+                                            <div class="form-group row"><label class="col-sm-3 col-form-label">Transmisión</label>
                                                 <div class="col-sm-9">
-                                                    <input 
-                                                        type="date"
-                                                        name="fecha_desde_vehiculo"
-                                                        id="fecha_desde_vehiculo"
-                                                        class="form-control"
-                                                    >
-                                                </div>
-                                            </div>
-                                        </div>
-                                        <div class="form-group">
-                                            <div class="form-group row"><label class="col-sm-3 col-form-label">Vigencia hasta</label>
-                                                <div class="col-sm-9">
-                                                    <input 
-                                                        type="date"
-                                                        name="fecha_hasta_vehiculo"
-                                                        id="fecha_hasta_vehiculo"
-                                                        class="form-control"
-                                                    >
+                                                    <select class="form-control" name="tipo_transmision_vehiculo" required>
+                                                        <option value="">Seleccione *</option>
+                                                        <option value="AUTOMÁTICO">AUTOMÁTICO</option>
+                                                        <option value="SINCRÓNICO">SINCRÓNICO</option>
+                                                    </select>
                                                 </div>
                                             </div>
                                         </div>
@@ -542,17 +530,6 @@
                                                 </div>
                                             </div>
                                         </div>
-                                        <div class="form-group">
-                                            <div class="form-group row"><label class="col-sm-3 col-form-label">Transmisión</label>
-                                                <div class="col-sm-9">
-                                                    <select class="form-control" name="tipo_transmision_vehiculo" required>
-                                                        <option value="">Seleccione *</option>
-                                                        <option value="AUTOMÁTICO">AUTOMÁTICO</option>
-                                                        <option value="SINCRÓNICO">SINCRÓNICO</option>
-                                                    </select>
-                                                </div>
-                                            </div>
-                                        </div>
                                         <div id="active-select-4">
                                             <div class="form-group">
                                                 <div class="form-group row"><label class="col-sm-3 col-form-label">Grado</label>
@@ -592,32 +569,6 @@
                                             </div>
                                         </div>
                                         <div class="form-group">
-                                            <div class="form-group row"><label class="col-sm-3 col-form-label">Tipo Fecha</label>
-                                                <div class="col-sm-9">
-                                                    <select class="form-control" name="tipo_fecha_recibo" id="tipo_fecha_recibo" required onchange="automaticDates()">
-                                                        <option value="">Seleccione *</option>
-                                                        <option value="MENSUAL">MENSUAL</option>
-                                                        <option value="TRIMESTRAL">TRIMESTRAL</option>
-                                                        <option value="SEMESTRAL">SEMESTRAL</option>
-                                                        <option value="ANUAL">ANUAL</option>
-                                                    </select>
-                                                </div>
-                                            </div>
-                                        </div>
-                                        <div class="form-group">
-                                            <div class="form-group row"><label class="col-sm-3 col-form-label">Vigencia Desde</label>
-                                                <div class="col-sm-9">
-                                                    <input 
-                                                        type="date"
-                                                        name="fecha_desde_recibo"
-                                                        id="fecha_desde_recibo" 
-                                                        class="form-control"
-                                                        required
-                                                    >
-                                                </div>
-                                            </div>
-                                        </div>
-                                        <div class="form-group">
                                             <div class="form-group row" id="radioContainer">
                                                 <label class="col-sm-3 col-form-label">Fraccionamiento</label>
                                                 <div class="col-sm-9">
@@ -631,6 +582,31 @@
                                         </div>
                                         <div id="active-select-1">
                                             <div class="form-group">
+                                                <div class="form-group row"><label class="col-sm-3 col-form-label">Tipo</label>
+                                                    <div class="col-sm-9">
+                                                        <select class="form-control" name="tipo_fraccionamiento_recibo" id="tipo_fraccionamiento_recibo" onchange="premiumCalculationDate()">
+                                                            <option value="">Seleccione</option>
+                                                            <option value="MENSUAL">MENSUAL</option>
+                                                            <option value="TRIMESTRAL">TRIMESTRAL</option>
+                                                            <option value="SEMESTRAL">SEMESTRAL</option>
+                                                            <option value="ANUAL">ANUAL</option>
+                                                        </select>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                            <div class="form-group">
+                                                <div class="form-group row"><label class="col-sm-3 col-form-label">Vigencia Desde</label>
+                                                    <div class="col-sm-9">
+                                                        <input 
+                                                            type="date"
+                                                            name="fecha_desde_recibo"
+                                                            id="fecha_desde_recibo" 
+                                                            class="form-control"
+                                                        >
+                                                    </div>
+                                                </div>
+                                            </div>
+                                            <div class="form-group">
                                                 <div class="form-group row"><label class="col-sm-3 col-form-label">Fecha de Pago</label>
                                                     <div class="col-sm-9">
                                                         <input 
@@ -638,7 +614,6 @@
                                                             name="fecha_pago_recibo"
                                                             id="fecha_pago_recibo" 
                                                             class="form-control"
-                                                            onchange="premiumCalculationDate()"
                                                         >
                                                     </div>
                                                 </div>
@@ -707,33 +682,7 @@
                                                 </div>
                                             </div>
                                         </div>
-                                        <div class="form-group">
-                                            <div class="form-group row"><label class="col-sm-3 col-form-label">Vigencia Hasta</label>
-                                                <div class="col-sm-9">
-                                                    <input 
-                                                        type="date"
-                                                        name="fecha_hasta_recibo"
-                                                        id="fecha_hasta_recibo"
-                                                        class="form-control"
-                                                        required
-                                                    >
-                                                </div>
-                                            </div>
-                                        </div>
                                         <div id="active-select-2">
-                                            <div class="form-group">
-                                                <div class="form-group row"><label class="col-sm-3 col-form-label">Tipo</label>
-                                                    <div class="col-sm-9">
-                                                        <select class="form-control" name="tipo_fraccionamiento_recibo" id="tipo_fraccionamiento_recibo" onchange="premiumCalculationDate()">
-                                                            <option value="">Seleccione</option>
-                                                            <option value="MENSUAL">MENSUAL</option>
-                                                            <option value="TRIMESTRAL">TRIMESTRAL</option>
-                                                            <option value="SEMESTRAL">SEMESTRAL</option>
-                                                            <option value="ANUAL">ANUAL</option>
-                                                        </select>
-                                                    </div>
-                                                </div>
-                                            </div>
                                             <div class="form-group">
                                                 <div class="form-group row"><label class="col-sm-3 col-form-label">Número de Pagos</label>
                                                     <div class="col-sm-9">
@@ -744,7 +693,19 @@
                                                             id="numero_pago_recibo"
                                                             value="0" 
                                                             class="form-control"
-                                                            onchange="premiumCalculationDate()"
+                                                            onkeyup="premiumCalculationDate();"
+                                                        >
+                                                    </div>
+                                                </div>
+                                            </div>
+                                            <div class="form-group">
+                                                <div class="form-group row"><label class="col-sm-3 col-form-label">Vigencia Hasta</label>
+                                                    <div class="col-sm-9">
+                                                        <input 
+                                                            type="date"
+                                                            name="fecha_hasta_recibo"
+                                                            id="fecha_hasta_recibo"
+                                                            class="form-control"
                                                         >
                                                     </div>
                                                 </div>
